Fix Windows CMake build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,24 @@
 cmake_minimum_required(VERSION 2.8)
 
-FIND_PACKAGE(PkgConfig REQUIRED)
-PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)
-#FIND_PACKAGE(GLFW3 REQUIRED)
-FIND_PACKAGE(GLEW REQUIRED)
+IF (APPLE)
+	FIND_PACKAGE(PkgConfig REQUIRED)
+	PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)
+	#FIND_PACKAGE(GLFW3 REQUIRED)
+ELSE ()
+	SET(GLFW_BUILD_EXAMPLES OFF)
+	SET(GLFW_BUILD_TESTS OFF)
+	SET(GLFW_BUILD_DOCS OFF)
+	ADD_SUBDIRECTORY(glfw)
+	SET(GLFW_INCLUDE_DIRS glfw/include)
+	LIST(APPEND GLFW_LIBRARIES glfw)
+ENDIF ()
+#FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
-FIND_PACKAGE(GLM REQUIRED)
+#FIND_PACKAGE(GLM REQUIRED)
 
 INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIRS})
-INCLUDE_DIRECTORIES(${GLEW_INCLUDE_PATH})
-INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
+#INCLUDE_DIRECTORIES(${GLEW_INCLUDE_PATH})
+#INCLUDE_DIRECTORIES(${GLM_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(imgui imgui/examples/opengl3_example imgui/examples/libs/gl3w)
 LINK_DIRECTORIES(${GLFW_LIBRARY_DIRS})
 
