Fix OS X build. Add resolution scaling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 
-IF (APPLE)
-	FIND_PACKAGE(PkgConfig REQUIRED)
-	PKG_SEARCH_MODULE(GLFW REQUIRED glfw3)
-	#FIND_PACKAGE(GLFW3 REQUIRED)
-ELSE ()
-	SET(GLFW_BUILD_EXAMPLES OFF)
-	SET(GLFW_BUILD_TESTS OFF)
-	SET(GLFW_BUILD_DOCS OFF)
-	ADD_SUBDIRECTORY(glfw)
-	SET(GLFW_INCLUDE_DIRS glfw/include)
-	LIST(APPEND GLFW_LIBRARIES glfw)
-ENDIF ()
+SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "")
+SET(GLFW_BUILD_TESTS OFF CACHE BOOL "")
+SET(GLFW_BUILD_DOCS OFF CACHE BOOL "")
+ADD_SUBDIRECTORY(glfw)
+SET(GLFW_INCLUDE_DIRS glfw/include)
+LIST(APPEND GLFW_LIBRARIES glfw)
+
 #FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
 #FIND_PACKAGE(GLM REQUIRED)
